changed cenitsaas by cenit.io

--- a/app/views/blog/asana_integration.html.erb
+++ b/app/views/blog/asana_integration.html.erb
@@ -1,4 +1,4 @@
-<% title = 'Screencast | Asana Integration on CenitSaaS' %>
+<% title = 'Screencast | Asana Integration on cenit.io' %>
 <%= render 'shared/page_header', title: title, home: false %>
 <div id="blogpost">
   <div id="blogpost-wrapper">
