--- a/app/views/blog/cenit_api_collections_for_google_services.html.erb
+++ b/app/views/blog/cenit_api_collections_for_google_services.html.erb
@@ -54,16 +54,16 @@
 
             <p>
               You can easily try an API by following the next steps by yourself
-              signing up for free in CenitSaaS.</p>
+              signing up for free in cenit.io</p>
 
             <h1 style="line-height: 100%; page-break-before: auto; page-break-after: auto">
               Trying a Cenit API Collection</h1>
 
             <p>
               To test an API just go into the CenitHub with your
-              <a href="https://cenitsaas.com/"><font color="#1155cc"><u>CenitSaaS</u></font></a>
+              <a href="https://cenit.io/"><font color="#1155cc"><u>cenit.io</u></font></a>
               account and search for the API in the Cenit Shared Collections. If
-              you do not have an <a href="https://cenitsaas.com/"><font color="#1155cc"><u>CenitSaaS</u></font></a>
+              you do not have an <a href="https://cenit.io/"><font color="#1155cc"><u>cenit.io</u></font></a>
               account go on anyway and create one, it’s free.</p>
 
             <p align="center">
