--- a/app/views/blog/gmail_cenit_collection.html.erb
+++ b/app/views/blog/gmail_cenit_collection.html.erb
@@ -36,7 +36,7 @@
             <p>
               Hopefully you do not have to run the awkward way anymore, because the Gmail Cenit
               Collection is now available, a wrapper that let you send emails as easy as it can be.
-              Try it now by following the next steps by yourself, signing up for free in CenitSaaS.</p>
+              Try it now by following the next steps by yourself, signing up for free in cenit.io.</p>
 
             <h1 style="line-height: 100%; page-break-before: auto; page-break-after: auto">
               Trying the Gmail Collection
@@ -49,7 +49,7 @@
                           cenithub_url(redirect_path: '/data/setup~shared_collection/gmail/pull',
                                        flash_message: "Click <span class=\"label label-info\"><i class=\"icon-arrow-down\"></i> Pull</span> or <span class=\"label label-info\"><i class=\"icon-ok\"></i> Ok</span> if you are already synchronized with this collection"),
                           target: '#'
-              %> and pull it with your CenitSaaS account. If you do not have a CenitSaaS account go on anyway and
+              %> and pull it with your cenit.io account. If you do not have a cenit.io account go on anyway and
               create one, it’s free.</p>
 
             <p align="center">
@@ -132,7 +132,7 @@
             <p>
               Because CenitHub automatically manages your OAuth 2.0 access and refreshes tokens, you do not have to
               worry in the future about being authorized again. Just continue sending emails in a simple format through
-              the CenitHub API, until you explicitly revoke your authorization with your CenitSaaS account or in your
+              the CenitHub API, until you explicitly revoke your authorization with your cenit.io account or in your
               Google Acount configuration.
             </p>
 
