--- a/app/views/blog/index.html.erb
+++ b/app/views/blog/index.html.erb
@@ -27,7 +27,7 @@
               and background running logic for the automatic management of the OAuth 2.0 protocol implementation
               provided by Google. Now the Gmail Cenit Collection is available, a wrapper that let you send emails as easy as it can be,
               so you do not have to run the awkward way of interacting with the API anymore.
-              Try it now by following the next steps by yourself, signing up for free in CenitSaaS.
+              Try it now by following the next steps by yourself, signing up for free in cenit.io.
             </p>
             <%= link_to 'Continue reading ...', gmail_cenit_collection_blog_index_path, class: "continue-reading", data: { no_turbolink: true } %>
           </div>
@@ -81,7 +81,7 @@
               </div>
             </div>
             <div class="title">
-              <%= link_to 'Screencast | Asana Integration on CenitSaaS', asana_integration_blog_index_path, data: { no_turbolink: true } %>
+              <%= link_to 'Screencast | Asana Integration on cenit.io', asana_integration_blog_index_path, data: { no_turbolink: true } %>
             </div>
             <div class="author">
               September 15, 2015
@@ -101,7 +101,7 @@
               </div>
             </div>
             <div class="title">
-              <%= link_to 'Screencast | Mailchimp Integration on CenitSaaS', mailchimp_integration_blog_index_path, data: { no_turbolink: true } %>
+              <%= link_to 'Screencast | Mailchimp Integration on cenit.io', mailchimp_integration_blog_index_path, data: { no_turbolink: true } %>
             </div>
             <div class="author">
               September 4, 2015
@@ -185,7 +185,7 @@
               </div>
             </div>
             <div class="title">
-              <%= link_to 'Screencast | Shipwire Integration on CenitSaaS', shipwire_integration_blog_index_path, data: { no_turbolink: true } %>
+              <%= link_to 'Screencast | Shipwire Integration on cenit.io', shipwire_integration_blog_index_path, data: { no_turbolink: true } %>
             </div>
             <div class="author">
               August 31, 2015
@@ -204,7 +204,7 @@
             <% end %>
 
             <div class="title">
-              <%= link_to 'CenitSaaS - 1 year since kick off', first_anniversary_blog_index_path, data: { no_turbolink: true } %>
+              <%= link_to 'cenit.io - 1 year since kick off', first_anniversary_blog_index_path, data: { no_turbolink: true } %>
             </div>
             <div class="author">
               <%= image_tag 'testimonials/sancho.jpg', :alt => 'author', class: "avatar" %>
@@ -213,7 +213,7 @@
             <p class="intro">
               Now we are close to celebrate our first anniversary next Jun 1st. At that time, there have been 
               hard work, long hours of brainstorming and lots of valuable feedback from colleagues. Most of which added 
-              some new functionality or fine-tuned some existing functionality at CenitSaaS. We've got a recap of our work 
+              some new functionality or fine-tuned some existing functionality at cenit.io. We've got a recap of our work 
               that want to share with you.
             </p>
             <%= link_to 'Continue reading ...', first_anniversary_blog_index_path, class: "continue-reading", data: { no_turbolink: true } %>
