--- a/app/views/blog/multi_channel_messaging.html.erb
+++ b/app/views/blog/multi_channel_messaging.html.erb
@@ -27,7 +27,7 @@
             <p>
               We assume you have a Cenit account. If you do not have an account go on
                  <%=
-                     link_to "CenitSaaS",
+                     link_to "cenit.io",
                             "https://www.cenitsaas.com"
                  %> and create one, it’s free.
             </p>
@@ -172,7 +172,7 @@
             </p>
 
             <br>
-             <%= render partial: 'shared/video', locals: { title: '<strong>Twitter Integration</strong> using CenitSaaS'.html_safe, video: 'https://www.youtube.com/embed/jTBmw8AhWIE' } %>
+             <%= render partial: 'shared/video', locals: { title: '<strong>Twitter Integration</strong> using cenit.io'.html_safe, video: 'https://www.youtube.com/embed/jTBmw8AhWIE' } %>
             <br>
 
             <h3>
