--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -20,7 +20,7 @@
 </div>
 
 
-<!-- Google Code for CenitSaaS new user Conversion Page -->
+<!-- Google Code for cenit.io new user Conversion Page -->
 <script type="text/javascript">
     /* <![CDATA[ */
     var google_conversion_id = 946349475;
