--- a/app/views/partnership/index.html.erb
+++ b/app/views/partnership/index.html.erb
@@ -11,11 +11,11 @@
       <div class="row">
         <div class="col-md-10 post">
           <div class="title">
-            Programa de Partnership de CenitSaaS a empresas que brindan servicios sobre Odoo en América Latina.
+            Programa de Partnership de cenit.io a empresas que brindan servicios sobre Odoo en América Latina.
           </div>
           <div class="author">
-            <%= image_tag 'logo_cenit_xs.jpg', :alt => 'logo CenitSaaS', class: "avatar", data: { no_turbolink: true }  %>
-            CenitSaaS
+            <%= image_tag 'logo_cenit_xs.jpg', :alt => 'logo cenit.io', class: "avatar", data: { no_turbolink: true }  %>
+            cenit.io
           </div>
           <div class="content">
            <p> Nuestra visión es crear una red de empresas que utilizando Odoo (nombrado también OpenERP) u otras soluciones de gestión empresarial puedan de forma sencilla, realizar transacciones B2B u operaciones de sincronización de datos entre las empresas, así como integrarse a otros servicios empresariales disponibles en internet que brindan valor agregado para la comunicación, gestión de inventario, fullfilment, canales de ventas, etc. </p>
@@ -28,7 +28,7 @@
             
             <p>Desde un tenant central se puede decidir por cada tipo de plan cuáles módulos brindará como requeridos y cuáles como opcionales. </p>
 
-            <p>Podemos asesorarlos en la implementación de la infraestructura SaaS para su empresa. Brindamos la opción de hacer el despliegue de la infraestructura en los servidores de CenitSaaS, con la posibilidad de mantener su propio dominio, o utilizar nuestro dominio cenitsaas.com si le resulta conveniente. </p>
+            <p>Podemos asesorarlos en la implementación de la infraestructura SaaS para su empresa. Brindamos la opción de hacer el despliegue de la infraestructura en los servidores de cenit.io, con la posibilidad de mantener su propio dominio, o utilizar nuestro dominio cenitsaas.com si le resulta conveniente. </p>
 
             <p>Si está interesado en evaluar la solución, facilitamos un servidor de pruebas en nuestra infraestructura con la solución montada y lista para usar, donde podrá observar las funciones de administración del servicio SaaS, crear tenant de prueba y evaluar de forma integral la solución.</p>
 
