--- a/app/views/terms_of_service/index.html.erb
+++ b/app/views/terms_of_service/index.html.erb
@@ -3,7 +3,7 @@
 
 <div class='container'>
   <div class='col-sm-12'>
-
+cenit.io
 <p>Thank you for using Cenit! These terms of service (the “Terms”) govern your access to and use of Cenit, LLC (“we” or “our”) websites, services (the “Services”) and all related subdomains, so please carefully read them before using the Services. Where appropriate, the term “we” or “our” refers both to the Cenit, LLC and its affiliates.</p>
 
 <p>By using the Services you agree to be bound by these Terms. If you are using the Services on behalf of an organization, you are agreeing to these Terms for that organization and promising that you have the authority to bind that organization to these terms. In that case, “you” and “your” will refer to that organization.</p>
@@ -95,23 +95,23 @@ Copyright</p>
 
 <h4>Cenit for Business Agreement</h4>
 
-<p>This CenitSaaS for Business Agreement (the "Agreement") is between Cenit, LLC., a Delaware corporation ("Cenit") and Customer or End User, as applicable. This Agreement governs access to and use of the CenitSaaS for Business services and any client software (the "Services" or "CenitSaaS for Business").</p>
+<p>This cenit.io for Business Agreement (the "Agreement") is between Cenit, LLC., a Delaware corporation ("Cenit") and Customer or End User, as applicable. This Agreement governs access to and use of the cenit.io for Business services and any client software (the "Services" or "cenit.io for Business").</p>
 
-<p>The Customer ordering the Services: If you are ordering the Services, then by clicking "I Agree," signing your contract for the Services or using CenitSaaS for Business, you agree to this Agreement as a "Customer." If you are agreeing to this Agreement for use by an organization, you are agreeing to this Agreement on behalf of that organization. You must have the authority to bind that organization to this Agreement, otherwise you must not sign up for the Services.</p>
+<p>The Customer ordering the Services: If you are ordering the Services, then by clicking "I Agree," signing your contract for the Services or using cenit.io for Business, you agree to this Agreement as a "Customer." If you are agreeing to this Agreement for use by an organization, you are agreeing to this Agreement on behalf of that organization. You must have the authority to bind that organization to this Agreement, otherwise you must not sign up for the Services.</p>
 
-<p>End Users: If you are using the Services as an "End User", then by clicking "I Agree" or using CenitSaaS for Business you agree to this Agreement (especially note sections 1 and 13) and our Terms of Service at https://cenitsaas.com/terms_of_service. To the extent this Agreement conflicts with our Terms of Service, this Agreement controls. Please take note that in this Agreement, you are agreeing that your Administrator may be able to control account information and access to your CenitSaaS for Business account.</p>
+<p>End Users: If you are using the Services as an "End User", then by clicking "I Agree" or using cenit.io for Business you agree to this Agreement (especially note sections 1 and 13) and our Terms of Service at https://cenitsaas.com/terms_of_service. To the extent this Agreement conflicts with our Terms of Service, this Agreement controls. Please take note that in this Agreement, you are agreeing that your Administrator may be able to control account information and access to your cenit.io for Business account.</p>
 
 <ul>
   <li>End Users.</li>
   <li>Customer Obligations.</li>
   <li>Services.</li>
-  <li>Support. Customer 	will, at its own expense, respond to questions and complaints from	End Users or third parties relating to use of the Services. Customer will use reasonable efforts to resolve support issues before escalating them to CenitSaaS.</li>
+  <li>Support. Customer 	will, at its own expense, respond to questions and complaints from	End Users or third parties relating to use of the Services. Customer will use reasonable efforts to resolve support issues before escalating them to cenit.io.</li>
   <li>Suspension.</li>
   <li>Intellectual Property Rights.</li>
 
   <li>Third Party Services. If Customer uses any third-party service with the Services, (a) the service may access or use Customer's or End User's information; (b) We will not be responsible for any act or omission of the third party, including the third party's use of Customer's or End User's information; and (c) We do not warrant or support any service provided by the third party.</li>
     
-  <li>Disclaimers. THE 	SERVICES ARE PROVIDED "AS IS." TO THE FULLEST EXTENT PERMITTED BY LAW, EXCEPT AS EXPRESSLY STATED IN THIS AGREEMENT, NEITHER CENITSAAS NOR CUSTOMER MAKES ANY WARRANTY OF ANY KIND, WHETHER 	EXPRESS, IMPLIED, STATUTORY OR OTHERWISE, INCLUDING WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR USE, OR NONINFRINGEMENT. CENITSAAS MAKES NO REPRESENTATIONS ABOUT ANY CONTENT OR INFORMATION IN OR FROM AN END USER OR CUSTOMER SERVICES ACCOUNT. CenitSaaS is not responsible for the accuracy, completeness, appropriateness, or 	legality of files, user posts, or any other information in or from an End User or Customer Services account. CenitSaaS has no responsibility or liability for the deletion or failure to store any information in or from an End User or Customer Services account.</li>
+  <li>Disclaimers. THE 	SERVICES ARE PROVIDED "AS IS." TO THE FULLEST EXTENT PERMITTED BY LAW, EXCEPT AS EXPRESSLY STATED IN THIS AGREEMENT, NEITHER CENITSAAS NOR CUSTOMER MAKES ANY WARRANTY OF ANY KIND, WHETHER 	EXPRESS, IMPLIED, STATUTORY OR OTHERWISE, INCLUDING WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR USE, OR NONINFRINGEMENT. CENITSAAS MAKES NO REPRESENTATIONS ABOUT ANY CONTENT OR INFORMATION IN OR FROM AN END USER OR CUSTOMER SERVICES ACCOUNT. cenit.io is not responsible for the accuracy, completeness, appropriateness, or 	legality of files, user posts, or any other information in or from an End User or Customer Services account. cenit.io has no responsibility or liability for the deletion or failure to store any information in or from an End User or Customer Services account.</li>
   <li>Fees & Payment.</li>
   <li>Term & Termination.</li>
   <li>Limitation of Liability.</li>
@@ -119,15 +119,15 @@ Copyright</p>
   <li>Privacy Policy</li>
 </ul>
 
-<p>This Privacy Policy provides our policies and procedures for collecting, using, and disclosing your information. Users can access the CenitSaaS service (the “Service”) through our website www.cenitsaas.com, applications on Devices, through APIs, and through third-parties. A “Device” is any computer used to access the Cenit Service, including without limitation a desktop, laptop, mobile phone, tablet, or other consumer electronic device. This Privacy Policy governs your access of the CenitSaaS Service, regardless of how you access it, and by using our Services you consent to the collection, transfer, processing, storage, disclosure and other uses described in this Privacy Policy. All of the different forms of data, content, and information described below are collectively referred to as “information.”</p>
+<p>This Privacy Policy provides our policies and procedures for collecting, using, and disclosing your information. Users can access the cenit.io service (the “Service”) through our website www.cenitsaas.com, applications on Devices, through APIs, and through third-parties. A “Device” is any computer used to access the Cenit Service, including without limitation a desktop, laptop, mobile phone, tablet, or other consumer electronic device. This Privacy Policy governs your access of the cenit.io Service, regardless of how you access it, and by using our Services you consent to the collection, transfer, processing, storage, disclosure and other uses described in this Privacy Policy. All of the different forms of data, content, and information described below are collectively referred to as “information.”</p>
 
 <h4>The Information We Collect And Store</h4>
 
 <p>We may collect and store the following information when running the Cenit Service:</p>
 
-<p>Information You Provide.   When you register an account, we collect some personal information, such as your name, phone number, credit card or other billing information, email address and home and business postal addresses. You may also ask us to import your contacts by giving us access to your third party services (for example, your email account) or to use your social networking information if you give us access to your account on social network connection services. When you invite others to join CenitSaaS by using our referral page, we send them a one-time email for that referral. You may also provide us with your contacts’ email addresses when sharing folders or files with them. We may also receive Personal Information (for example, your email address) through other users, for example if they have tried to share something with you or tried to refer Cenit to you.</p>
+<p>Information You Provide.   When you register an account, we collect some personal information, such as your name, phone number, credit card or other billing information, email address and home and business postal addresses. You may also ask us to import your contacts by giving us access to your third party services (for example, your email account) or to use your social networking information if you give us access to your account on social network connection services. When you invite others to join cenit.io by using our referral page, we send them a one-time email for that referral. You may also provide us with your contacts’ email addresses when sharing folders or files with them. We may also receive Personal Information (for example, your email address) through other users, for example if they have tried to share something with you or tried to refer Cenit to you.</p>
 
-<p>Files. We collect and store the files you upload, download, or access with the CenitSaaS Service (“Files”). If you add a file to your CenitSaaS that has been previously uploaded by you or another user, we may associate all or a portion of the previous file with your account rather than storing a duplicate.</p>
+<p>Files. We collect and store the files you upload, download, or access with the cenit.io Service (“Files”). If you add a file to your cenit.io that has been previously uploaded by you or another user, we may associate all or a portion of the previous file with your account rather than storing a duplicate.</p>
 
 <p>Log Data.   When you use the Service, we automatically record information from your Device, its software, and your activity using the Services. This may include the Device’s Internet Protocol (“IP”) address, browser type, the web page visited before you came to our website, information you search for on our website, locale preferences, identification numbers associated with your Devices, your mobile carrier, date and time stamps associated with transactions, system configuration information, metadata concerning your Files, and other interactions with the Service.
 </p>
@@ -148,7 +148,7 @@ Copyright</p>
 
 <p>Third-Party Applications.   We may share your information with a third party application with your consent, for example when you choose to access our Services through such an application. We are not responsible for what those parties do with your information, so you should make sure you trust the application and that it has a privacy policy acceptable to you.</p>
 
-<p>Compliance with Laws and Law Enforcement Requests; Protection of Cenit,LLC Rights.   We may disclose to parties outside Cenit files stored in your Cenit and information about you that we collect when we have a good faith belief that disclosure is reasonably necessary to (a) comply with a law, regulation or compulsory legal request; (b) protect the safety of any person from death or serious bodily injury; (c) prevent fraud or abuse of CenitSaaS or its users; or (d) to protect CenitSaaS property rights. If we provide your CenitSaaS files to a law enforcement agency as set forth above, we will remove CenitSaas encryption from the files before providing them to law enforcement. However, CenitSaaS will not be able to decrypt any files that you encrypted prior to storing them on CenitSaaS.</p>
+<p>Compliance with Laws and Law Enforcement Requests; Protection of Cenit,LLC Rights.   We may disclose to parties outside Cenit files stored in your Cenit and information about you that we collect when we have a good faith belief that disclosure is reasonably necessary to (a) comply with a law, regulation or compulsory legal request; (b) protect the safety of any person from death or serious bodily injury; (c) prevent fraud or abuse of cenit.io or its users; or (d) to protect cenit.io property rights. If we provide your cenit.io files to a law enforcement agency as set forth above, we will remove CenitSaas encryption from the files before providing them to law enforcement. However, cenit.io will not be able to decrypt any files that you encrypted prior to storing them on cenit.io.</p>
 
 <p>Business Transfers.   If we are involved in a merger, acquisition, or sale of all or a portion of our assets, your information may be transferred as part of that transaction, but we will notify you (for example, via email and/or a prominent notice on our website) of any change in control or use of your Personal Information or Files, or if either become subject to a different Privacy Policy. We will also notify you of choices you may have regarding the information.</p>
 
@@ -165,15 +165,15 @@ Copyright</p>
 <h4>Our services for Business Users</h4>
 
 <p>If you have a Business account, your Administrator may be able to:
-access information in and about your CenitSaaS for Business account;	
-disclose, restrict, or access information that you have provided or that is made available to you 	when using your CenitSaaS for Business account; and
-control how your CenitSaaS for Business account may be 	accessed or deleted.
+access information in and about your cenit.io for Business account;	
+disclose, restrict, or access information that you have provided or that is made available to you 	when using your cenit.io for Business account; and
+control how your cenit.io for Business account may be 	accessed or deleted.
 Please refer to your organization's policies if you have questions about your Administrator's rights.</p>
 
 <h4>Community</h4>
 
 <p>Our Service offers publicly accessible community services such as blogs, forums, and wikis. You should be aware that any information you provide in these areas may be read, collected, and used by others who access them. Your posts may remain even after you cancel your account. For questions about your Personal Information on our Service, please contact support@cenitsaas.com.
-Our Site includes links to other Web sites whose privacy practices may differ from those of CenitSaaS. If you submit personal information to any of those sites, your information is governed by their privacy statements. We encourage you to carefully read the privacy statement of any web site you visit.</p>
+Our Site includes links to other Web sites whose privacy practices may differ from those of cenit.io. If you submit personal information to any of those sites, your information is governed by their privacy statements. We encourage you to carefully read the privacy statement of any web site you visit.</p>
 
 <h4>Security</h4>
 
