--- a/app/views/blog/_menu.html.erb
+++ b/app/views/blog/_menu.html.erb
@@ -2,14 +2,14 @@
   <div class="best-hits">
     <strong>Articles</strong><br />
     <%= link_to 'The easy way to connect with the Gmail API', gmail_cenit_collection_blog_index_path, data: { no_turbolink: true } %>
-    <%= link_to 'Multi-Channel Messaging with Cenit', multi_channel_messaging_blog_index_path, data: { no_turbolink: true } %>
+    <%= link_to 'Multi-Channel Messaging with cenit.io', multi_channel_messaging_blog_index_path, data: { no_turbolink: true } %>
     <%= link_to 'Cenit API Collections for Google Services', cenit_api_collections_for_google_services_blog_index_path, data: { no_turbolink: true } %>
-    <%= link_to 'Screencast | Asana Integration on Cenit', asana_integration_blog_index_path, data: { no_turbolink: true } %>
-    <%= link_to 'Screencast | Mailchimp Integration on Cenit', mailchimp_integration_blog_index_path, data: { no_turbolink: true } %>
+    <%= link_to 'Screencast | Asana Integration on cenit.io', asana_integration_blog_index_path, data: { no_turbolink: true } %>
+    <%= link_to 'Screencast | Mailchimp Integration on cenit.io', mailchimp_integration_blog_index_path, data: { no_turbolink: true } %>
     <%= link_to "Screencast | Part III: Using Cenit's Twitter Integration on Odoo", using_twitter_integration_on_odoo_blog_index_path, data: { no_turbolink: true } %>
     <%= link_to "Screencast | Part II: Installing Cenit's Twitter Integration on Odoo", installing_twitter_integration_on_odoo_blog_index_path, data: { no_turbolink: true } %>
     <%= link_to "Screencast | Part I: Cenit Integrations Client on Odoo", cenit_integration_client_on_odoo_blog_index_path, data: { no_turbolink: true } %>
-    <%= link_to 'Screencast | Shipwire Integration on Cenit', shipwire_integration_blog_index_path, data: { no_turbolink: true } %>
-    <%= link_to 'Cenit - 1 year since kick off', first_anniversary_blog_index_path, data: { no_turbolink: true } %>
+    <%= link_to 'Screencast | Shipwire Integration on cenit.io', shipwire_integration_blog_index_path, data: { no_turbolink: true } %>
+    <%= link_to 'cenit.io - 1 year since kick off', first_anniversary_blog_index_path, data: { no_turbolink: true } %>
   </div>
 </div>
