--- a/app/views/blog/mailchimp_integration.html.erb
+++ b/app/views/blog/mailchimp_integration.html.erb
@@ -1,4 +1,4 @@
-<% title = 'Screencast | Mailchimp Integration on CenitSaaS' %>
+<% title = 'Screencast | Mailchimp Integration on cenit.io' %>
 <%= render 'shared/page_header', title: title, home: false %>
 
 <div id="blogpost">
