--- a/app/views/directory/show.html.erb
+++ b/app/views/directory/show.html.erb
@@ -157,7 +157,7 @@
 
       <div class="row header">
         <h3>Need an easy way to connect your business with <%= link_to @item.name, @item.api_provider || @item.api_homepage || '#' %>?</h3>
-        <p>CenitSaaS is the perfect tool to help you out. <a data-toggle="modal"  class="item" href="#contact_us" data-backdrop="false">Get in touch</a> </p>
+        <p>cenit.io is the perfect tool to help you out. <a data-toggle="modal"  class="item" href="#contact_us" data-backdrop="false">Get in touch</a> </p>
         <br/><br/>
       </div>
 
